flux/infrastructure/3dprinting/bumpmesh/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bumpmesh
  namespace: 3dprinting
  labels:
    app: bumpmesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bumpmesh
  template:
    metadata:
      labels:
        app: bumpmesh
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
      - name: nginx
        image: docker.io/library/nginx:alpine-slim
        resources:
          limits:
            cpu: '1'
            memory: 256Mi
          requests:
            cpu: 10m
            memory: 32Mi
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
        securityContext:
          capabilities:
            drop:
            - ALL
      volumes:
      - name: html
        persistentVolumeClaim:
          claimName: bumpmesh-html
