flux/infrastructure/3dprinting/bumpmesh/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bumpmesh
  namespace: 3dprinting
spec:
  selector:
    app: bumpmesh
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
