flux/infrastructure/3dprinting/bumpmesh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bumpmesh
  namespace: 3dprinting
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - bump.becklab.cloud
    secretName: bumpmesh-tls
  rules:
  - host: bump.becklab.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bumpmesh
            port:
              number: 80
